--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,12 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="CalenderViewCustom" parent="Theme.AppCompat">
+        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimary">@color/purple_700</item>
+        <item name="android:textColorPrimary">@color/black</item>
+    </style>
+
     <style name="Theme.ScheduleApplication.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
